[package]
name = "acme-rs"
version = "0.1.0"
authors = ["Bastian Kersting <bastian@cmbt.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
url = "2.2.0"
openssl = { version = "0.10", features = ["vendored"] }
rpki = "0.10.0"
base64 = "0.13.0"
rouille = "3.0.0"
