[package]
name = "acme-rs"
version = "0.2.0"
authors = ["Bastian Kersting <bastian@cmbt.de>", "Tobias Karius <tobias.karius@yahoo.de>", "Elena Lilova <elena.lilova@gmx.de>", "Dominik Jantschar <dominik.jantschar@web.de>"]
license = "MIT"
repository = "https://github.com/kariustobias/acme-rs"
keywords = ["acme", "network", "client", "SSL", "certificate"]
description = "An acme client (RFC8555) written in the rust programming language"
readme = "README.md"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
openssl = { version = "0.10", features = ["vendored"] }
base64 = "0.13.0"
rouille = "3.0.0"
clap = "3.0.0-beta.5"
flexi_logger = "0.17.1"
log = "0.4.14"
thiserror = "1.0"

[lib]
name = "acme_rs"
path = "src/lib.rs"

[[bin]]
name = "acme-rs"
path = "src/bin.rs"
